--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,15 @@
   },
   "dependencies": {
     "add-to-calendar-button-react": "^2.2.7",
+    "axios": "^1.5.1",
     "file-loader": "^6.2.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet.locatecontrol": "^0.79.0",
     "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^2.14.1",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
