--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-window": "^1.8.9",
     "react-window-infinite-loader": "^1.0.9",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "swiper": "^10.3.1"
   }
 }
