vote sending, vote view setting, set name, repo pattern, global context, use hooks aka entitties handlers, timer, date for human, check for email and tg confirm, tg confirmation, smth clearer

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "add-to-calendar-button-react": "^2.2.7",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "file-loader": "^6.2.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.1",
