--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "leaflet.locatecontrol": "^0.79.0",
     "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^2.14.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
