--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "mapbox-gl": "^2.14.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
@@ -44,6 +45,7 @@
     "react-router-dom": "^6.4.5",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
+    "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.15",
     "react-window": "^1.8.9",
     "react-window-infinite-loader": "^1.0.9",
