--- a/server/.env
+++ b/server/.env
@@ -2,11 +2,11 @@ API_URL=http://localhost:3000
 CLIENT_URL=http://localhost:9000
 PORT=3000
 
-DB_NAME=defaultdb
-DB_USER=doadmin
-DB_PASS=AVNS_KQYHMCICfPnBUjnWGyw
-DB_HOST=db-postgresql-ams3-85898-do-user-14984327-0.c.db.ondigitalocean.com
-DB_PORT=25060
+DB_NAME=book-club
+DB_USER=postgres
+DB_PASS=admin
+DB_HOST=localhost
+DB_PORT=5432
 
 TG_BOT_ID=6645296253:AAFzHpMt1P2fzH5f1Wx3RY7Wm1TAyfz0zMg
 
